# clip-annotator

./: README.md  setup.cfg  setup.py  update_pypi.sh
clip_annotator/: __init__.py  __main__.py  labeler.py  main.py  matcher.py  utils.py
clip_annotator/gui/: main.py
