[metadata]
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/calebweinreb/clip-annotator
description = Clip Annotator
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    PySide6
    vidio
    
[options.extras_require]
dev = 
    black
    sphinx==4.4.0
    sphinx_rtd_theme==1.0.0

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    clip-annotator = clip_annotator.main:run

[versioneer]
VCS = git
style = pep440
versionfile_source = clip_annotator/_version.py
versionfile_build = clip_annotator/_version.py
tag_prefix =
parentdir_prefix = 